# bwu

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md  security-review.md
.github/workflows/: governance.yml  rust.yml
crates/bwu-agent/: Cargo.toml
crates/bwu-agent/src/: lib.rs  main.rs
crates/bwu-agent/tests/: agent_contract.rs
crates/bwu-cli/: Cargo.toml
crates/bwu-cli/src/: lib.rs  main.rs
crates/bwu-cli/tests/: cli_contract.rs
crates/bwu-core/: Cargo.toml
crates/bwu-core/src/: api.rs  command.rs  crypto.rs  error.rs  lib.rs  namespace.rs  paths.rs  redaction.rs
crates/bwu-core/tests/: api_client.rs  crypto_core.rs  encrypted_fixtures.rs  paths.rs  redaction.rs  workspace_policy.rs
docs/: architecture.md  development-best-practices.md  milestones.md  references.md  security-model.md
docs/adr/: 0001-clean-room-implementation.md  0002-new-cli-and-storage-namespace.md  0003-optional-unix-socket-agent.md  0004-passkey-export-and-signing.md  0005-milestone-first-delivery.md  0006-crypto-core-and-local-storage.md  0007-auth-flow-and-bitwarden-client-api-contract.md  0008-passkey-export-and-signing-edge-policy.md  0009-release-and-distribution-posture.md  README.md
