[workspace]
members = [
    "crates/bwu-agent",
    "crates/bwu-cli",
    "crates/bwu-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/xrf9268-hue/bwu"
readme = "README.md"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"
