[package]
name = "bwu-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Command-line skeleton for bwu."

[dependencies]
bwu-core = { path = "../bwu-core" }

[[bin]]
name = "bwu"
path = "src/main.rs"

[lints]
workspace = true
