[package]
name = "bwu-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Shared command metadata, namespace constants, and skeleton errors for bwu."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
zeroize = { version = "1.8.2", features = ["alloc"] }

[dev-dependencies]
mockito = "1"

[lints]
workspace = true
