[package]
name = "bwu-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Shared command metadata, namespace constants, redaction, paths, and crypto primitives for bwu."

[dependencies]
aes = "0.8.4"
argon2 = "0.5.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
chacha20poly1305 = "0.11.0"
ciborium = "0.2.2"
coset = "0.4.2"
hkdf = "0.12.4"
hmac = "0.12.1"
openssl = "0.10.81"
pbkdf2 = "0.12.2"
rustix = { version = "1.1.4", features = ["process"] }
sha2 = "0.10.9"
zeroize = { version = "1.8.2", features = ["alloc"] }

[lints]
workspace = true
